--- a/Vocabeez/Property List.plist
+++ b/Vocabeez/Property List.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
+	<key>Fonts provided by application</key>
 	<array>
 		<string>Poppins-Thin.ttf</string>
 		<string>Poppins-ExtraLight.ttf</string>
